--- a/index.html
+++ b/index.html
@@ -14,6 +14,20 @@
   </head>
   <body>
     <h1>Ola mundo</h1>
+    <button>Converter em reais</button>
+    <div class="input-wrapper">
+      <label for="">Valor</label>
+      <input type="text">
+    </div>
+    <div class="input-wrapper">
+      <label for="">Valor</label>
+      <select name="" id="">
+        <option disabled selected hidden >Selecione a moeda</option>
+        <option value="">asdasd</option>
+        <option value="">dddd</option>
+        <option value="">cccccc</option>
+      </select>
+    </div>
     <script src="./Js/script.js"></script>
   </body>
 </html>
