funcao de submit do formulario

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <option value="GBP">Libra Esterlina</option>
             </select>
           </div>
-          <button>Converter em reais</button>
+          <button type="submit">Converter em reais</button>
         </div>
       </form>
       <footer>
