--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         </div>
       </form>
       <footer>
-        <span id="description">US$ 1 = R$ 4,86</span>
-        <h1 id="result">486,00 Reais</h1>
+        <span id="description"></span>
+        <h1 id="result"></h1>
       </footer>
     </div>
 
